Se corrige la ruta de reset password agregando el :userId para que el usuario coloque su id, dentro de swagger se corrige lo mismo para que pueda funcionar de manera correcta la prueba de update-password
